--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
 
         <p class="steps">
-            Open the extension on any page to start using Font Analyzer:
+            Open the extension (3) on any page to start using Font Analyzer:
         </p>
 
         <div class="screenshot">
